<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.esfinge-framework</groupId>
    <artifactId>PolyglotDemo4</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>PolyglotDemo4</name>

    <scm>
        <connection>scm:git:git://github.com/EsfingeFramework/querybuilder.git</connection>
        <developerConnection>scm:git:ssh://github.com:EsfingeFramework/querybuilder.git</developerConnection>
        <url>http://github.com/EsfingeFramework/querybuilder/tree/master/PolyglotTest</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.esfinge-framework</groupId>
            <artifactId>querybuilder-jpa1</artifactId>
            <version>2.2.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jboss.logging</groupId>
                    <artifactId>jboss-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.bytebuddy</groupId>
                    <artifactId>byte-buddy</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.github.esfinge-framework</groupId>
            <artifactId>querybuilder-jpa1-local</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.esfinge-framework</groupId>
            <artifactId>querybuilder-neo4j</artifactId>
            <version>2.0.0</version>
            <exclusions>
                <exclusion>
                    <groupId>io.github.classgraph</groupId>
                    <artifactId>classgraph</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-ogm-bolt-driver</artifactId>
            <version>4.0.12</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.18.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.1</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>3.5.3.Final</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>4.8.179</version>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>1.14.17</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.8,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.32</version>
                        </path>
                    </annotationProcessorPaths>
                    <source>11</source>
                    <target>11</target>
                    <release>11</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        -Dfile.encoding=UTF-8
                        --add-opens java.base/java.lang=cglib.nodep
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.security=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-exports java.base/sun.reflect.annotation=ALL-UNNAMED
                        --add-opens java.prefs/java.util.prefs=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing.text=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens java.desktop/java.awt=ALL-UNNAMED
                        --add-opens java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
                        --add-opens java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt.shell=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports java.desktop/sun.awt=ALL-UNNAMED
                        --add-exports java.desktop/java.awt.peer=ALL-UNNAMED
                        --add-exports java.desktop/com.sun.beans.editors=ALL-UNNAMED
                        --add-exports java.desktop/sun.swing=ALL-UNNAMED
                        --add-exports java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
                        --add-exports java.desktop/com.apple.eio=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-modules=jdk.jshell
                        --add-opens jdk.jshell/jdk.jshell=ALL-UNNAMED
                        --add-exports jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED
                        --add-exports jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
                        --add-exports jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-exports jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED
                        --add-exports java.management/sun.management=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>sources</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>javadoc</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>